  Bugzilla report 43235.

* Remove fall-back mechanism for references that are not resolved
  during normal runtime execution.

* FileUtils.createTempFile now actually creates the file.
  The TempFile task still does not create the file by default, can be instructed
  to do so however using a new parameter.
  Bugzilla report 33969.
  
Fixed bugs:
-----------

 * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
   Bugzilla report 38199.

 * <symlink> task couldn't overwrite files that were in the way of the symlink.
   Bugzilla report 43426.
   
 * <symlink> task failonerror="false" does not stop build from failing when 'ln' 
   command returns non-zero. Bugzilla report 43624  

 * <touch> task couldn't differentiate between "no resources specified" and "no resources
   matched."  Bugzilla report 43799.

 * ManifestClassPath throws when a relative path would traverse the file system root. Bugzilla
   report 44499.

 * <globmapper> had an indexoutofbounds when the prefix and postfix overlapped. Bugzilla report
   44731.
   
* <typedef> and <taskdef> failed to accept file names with #
  characters in them.
  Bugzilla report 45190

Other changes:
--------------

 * There is now a FileProvider interface for resources that act as a source
   of filenames. This should be used by tasks that require resources
   to provide filenames, rather than require that all resources
   are instances or subclasses of FileResource
   Bugzilla report 43348
   
 * Fixcrlf now gives better error messages on bad directory attributes.
   Bugzilla report 43936
   
 * a new property ant.project.default-target holds the value of the
   current <project>'s default attribute.

 * a new property ant.project.invoked-targets holds a comma separated
   list of the targets that have been specified on the command line
   (the IDE, an <ant> task ...) when invoking the current project.

Changes from Ant 1.7.0 TO Ant 1.7.1
=============================================
