@@ -48,7 +48,7 @@ public class NoBannerLogger extends DefaultLogger {
      * @param event A BuildEvent containing target information.
      *              Must not be <code>null</code>.
      */
-    public void targetStarted(BuildEvent event) {
+    public synchronized void targetStarted(BuildEvent event) {
         targetName = extractTargetName(event);
     }
 
@@ -67,7 +67,7 @@ public class NoBannerLogger extends DefaultLogger {
      *
      * @param event Ignored in this implementation.
      */
-    public void targetFinished(BuildEvent event) {
+    public synchronized void targetFinished(BuildEvent event) {
         targetName = null;
     }
 
@@ -88,9 +88,11 @@ public class NoBannerLogger extends DefaultLogger {
                 return;
         }
 
-        if (null != targetName) {
-            out.println(StringUtils.LINE_SEP + targetName + ":");
-            targetName = null;
+        synchronized (this) {
+            if (null != targetName) {
+                out.println(StringUtils.LINE_SEP + targetName + ":");
+                targetName = null;
+            }
         }
 
         super.messageLogged(event);
